tests/fixtures/errors/e0810_duplicate_default.mimz
// expect: E0810
module M {
    clock clk
    reset rst
    reg r: bit = 0
    on rise(clk) {
        default r <- 0
        default r <- 1
    }
}
